<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/activity_padding">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/activity_person_details_name_label" />

        <TextView
            android:id="@+id/textview_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/default_margin"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            tools:text="@string/app_name" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/activity_person_details_height_label" />

        <TextView
            android:id="@+id/textview_height"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/default_margin"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            tools:text="@string/app_name" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/activity_person_details_mass_label" />

        <TextView
            android:id="@+id/textview_mass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/default_margin"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            tools:text="@string/app_name" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/activity_person_details_hair_color_label" />

        <TextView
            android:id="@+id/textview_hair_color"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/default_margin"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            tools:text="@string/app_name" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/activity_person_details_skin_color_label" />

        <TextView
            android:id="@+id/textview_skin_color"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/default_margin"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            tools:text="@string/app_name" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/activity_person_details_eye_color_label" />

        <TextView
            android:id="@+id/textview_eye_color"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/default_margin"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            tools:text="@string/app_name" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/activity_person_details_birth_year_label" />

        <TextView
            android:id="@+id/textview_birth_year"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/default_margin"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            tools:text="@string/app_name" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/activity_person_details_gender_label" />

        <TextView
            android:id="@+id/textview_gender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/default_margin"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            tools:text="@string/app_name" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/activity_person_details_url_label" />

        <TextView
            android:id="@+id/textview_url"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/default_margin"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            tools:text="@string/app_name" />

        <android.support.v4.view.ViewPager
            android:id="@+id/viewpager"
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="400dp" />

    </LinearLayout>
    </ScrollView>
</LinearLayout>